css/numberz.css
@font-face {
  font-family: 'HelveticaNeue';
  src: url('../fonts/HelveticaNeue/HelveticaNeue.ttf')  format('truetype'), /* Safari, Android, iOS */
}
body {
  margin: 0;
  font-family: 'HelveticaNeue' sans-serif;
}

section {
  width: 100%;
  padding: 0;
  display: table;
  margin: 0;
  max-width: none;
  background-color: #FFF;
  height: 60vh;
}

/*Alternate color scheme*/
section:nth-of-type(odd) {
 background-color: #152844;
}

.uppercase {
  text-transform: uppercase;
}

.numberz-logo {
  background: url(../img/image2.png) no-repeat;
  background-size: contain;
  width: 150px;
  height: auto;
  margin-top: 10px;
}

.numberz-navbar {
  margin: 0;
  padding: 10px;
}

.numberz-hero {
  background: url(../img/new/bg.png);
  background-repeat: no-repeat;
  margin: 0 -25px;
  background-size: contain;
}

.intro {
  position: absolute;
  color: #fff;
  top: 12%;
  left: 10%;
}

.intro-heading {
  font-family: 'HelveticaNeue', Arial;
  font-size: 38px;
  font-weight: bold;
  letter-spacing: 1px;
}

.intro-para {
  font-family: Arial;
  font-size: 20px;
  font-weight: normal;
  letter-spacing: 1px;
}

.btn-signup {
  padding: 15px 70px;
  background-color: #F59D1F;
  color: #FFF;
  letter-spacing: 1px;
}

nav>ul>li>a {
  color: #6A6A6A;
  font-size: 14px;
}

.nav>li>a:focus, .nav>li>a:hover {
  background-color: #FFF;
  color: #40CCED;
}

.signup-link {
  border: 1px solid #40CCED;
  border-radius: 10px;
  padding: 5px 15px !important;
  margin-top: 10px;
}

.text-align-center {
  text-align: center;
}

.blue-text-color {
  color: #33BBDB;
}

.content {
  padding: 30px 10px;
}

.font-30 {
  font-size: 30px;
}

.logo {
  width: 100%;
  height: 75px;
  position: relative;
  left: 50px;
}

.description {
  text-align: center;
  font-size: 22px;
  padding-top: 20px;
}

.inv-management {
  background: url(../img/new/inv_management.png) no-repeat;
}

.expense-management {
  background: url(../img/new/expense_management.png) no-repeat;
}

.connect-bank {
  background: url(../img/new/bank.png) no-repeat;
}

.advances-invoices {
  background: url(../img/new/adv_invoices.png) no-repeat;
}

.acc-collaboration {
  background: url(../img/new/acc_collaboration.png) no-repeat;
}

.comments-section-1 {
  transform: translate(35%,15%);
}

.human-1 {
  background: url(../img/new/human1.png) no-repeat;
  width: 100%;
  height: 200px;
  background-size: contain;
}

.comment-1 {
  color: #888888;
  font-size: 18px;
  position: absolute;
  left: 150px;
  width: 400px;
  top: 70px;
}

.padding-20 {
  padding: 20px 50px;
}

.padding-30 {
  padding: 30px 80px;
}

.primary-headline {
  color: #33BBDB;
  font-weight: lighter;
}

.supporting-text {
  font-size: 22px;
  font-weight: lighter;
  color: #FFF;
}

.white-text-color {
  color: #FFF;
}

.grey-text-color {
  color: #5D5D5D;  
}

.font-18 {
  font-size: 18px;
}

